RESOLVED FIXED220929
[iOS] Obscured elements should not be focusable using the accessory bar
https://bugs.webkit.org/show_bug.cgi?id=220929
Summary [iOS] Obscured elements should not be focusable using the accessory bar
Aditya Keerthi
Reported 2021-01-25 09:25:02 PST
...
Attachments
Patch (8.87 KB, patch)
2021-01-25 09:45 PST, Aditya Keerthi
thorton: review+
Patch for landing (8.83 KB, patch)
2021-01-25 12:23 PST, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-01-25 09:25:17 PST
Aditya Keerthi
Comment 2 2021-01-25 09:45:55 PST
Tim Horton
Comment 3 2021-01-25 12:10:00 PST
Comment on attachment 418301 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418301&action=review > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2556 > +static inline bool isObscuredElement(Element& element) Why `IgnoreClipping`? Wouldn't you want to take clipping into account to know if you can see the thing?
Aditya Keerthi
Comment 4 2021-01-25 12:23:38 PST
Created attachment 418320 [details] Patch for landing
Aditya Keerthi
Comment 5 2021-01-25 12:25:36 PST
(In reply to Tim Horton from comment #3) > Comment on attachment 418301 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=418301&action=review > > > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2556 > > +static inline bool isObscuredElement(Element& element) > > Why `IgnoreClipping`? Wouldn't you want to take clipping into account to > know if you can see the thing? Right – I've removed `IgnoreClipping`.
EWS
Comment 6 2021-01-25 14:52:02 PST
Committed r271861: <https://trac.webkit.org/changeset/271861> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418320 [details].
Note You need to log in before you can comment on or make changes to this bug.